--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
           <li>
             <strong>Cargo:</strong>
-            <span>Freelancer, Full-Stack Developer, UI/UX Designer</span>
+            <span>Freelancer, Developer, UI/UX Designer</span>
           </li>
           <li>
             <strong>Website:</strong>
@@ -181,7 +181,7 @@
             <strong>Desktop</strong>
           </li>
           <li>
-            <div class="progress percent86"><span>86%</span></div>
+            <div class="progress percent76"><span>76%</span></div>
             <strong>Design Gráfico</strong>
           </li>
           <li>
